--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/deepseek": "^0.1.8",
     "ai": "^4.1.17",
     "next": "15.1.6",
+    "openai": "^4.82.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
